styles & templates optimization

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,9 @@
           <a class="navigation__route" data-route="edit-user">Редактировать профиль</a>
         </li>
         <li>
+          <a class="navigation__route" data-route="change-password">Смена пароля</a>
+        </li>
+        <li>
           <a class="navigation__route" data-route="chat">Чат</a>
         </li>
         <li>
